[package]
name = "Sachem"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
csv = "1.3.1"
env_logger = "0.11.8"
futures = "0.3.31"
indicatif = "0.18.0"
log = "0.4.27"
rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["json"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }